@startuml

title __PROJECT1-CONNECTX's Class Diagram__\n

  namespace cpsc2150.extendedConnectX {
    abstract class cpsc2150.extendedConnectX.AbsGameBoard {
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.BoardPosition {
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameBoard {
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameBoardMem {
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameScreen {
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    interface cpsc2150.extendedConnectX.IGameBoard {
    }
  }
  

  cpsc2150.extendedConnectX.AbsGameBoard .up.|> cpsc2150.extendedConnectX.IGameBoard
  cpsc2150.extendedConnectX.GameBoard .up.|> cpsc2150.extendedConnectX.IGameBoard
  cpsc2150.extendedConnectX.GameBoard -up-|> cpsc2150.extendedConnectX.AbsGameBoard
  cpsc2150.extendedConnectX.GameBoardMem -up-|> cpsc2150.extendedConnectX.AbsGameBoard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
